@@ -36,9 +36,9 @@ public class ColorUtil {
 
 	public static Color blend(int[] color1, int[] color2, double ratio) {
 		Color blended = new Color(
-			(int)(((color2[0]-color1[0]) * ratio) + color1[0]),
-			(int)(((color2[1]-color1[1]) * ratio) + color1[1]),
-			(int)(((color2[2]-color1[2]) * ratio) + color1[2]));
+			(int)(((color2[0] - color1[0]) * ratio) + color1[0]),
+			(int)(((color2[1] - color1[1]) * ratio) + color1[1]),
+			(int)(((color2[2] - color1[2]) * ratio) + color1[2]));
 
 		return blended;
 	}
@@ -115,7 +115,7 @@ public class ColorUtil {
 				}
 				else {
 					hexArray[i] = GetterUtil.getInteger(
-						new Character(c[i]).toString());
+						Character.valueOf(c[i]).toString());
 				}
 			}
 		}
